[gd_scene load_steps=7 format=3 uid="uid://game_scene_001"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1"]
[ext_resource type="Script" path="res://scripts/grid_manager.gd" id="2"]
[ext_resource type="Script" path="res://scripts/card_manager.gd" id="3"]
[ext_resource type="Script" path="res://scripts/victory_screen.gd" id="4"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="5"]
[ext_resource type="Script" path="res://scripts/score_manager.gd" id="6"]
[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="7"]

[node name="Game" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)

[node name="GridManager" type="Node2D" parent="."]
script = ExtResource("2")

[node name="CardManager" type="Node" parent="."]
script = ExtResource("3")

[node name="ScoreManager" type="Node" parent="."]
script = ExtResource("6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "Score: 1000"

[node name="AttemptsLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 24
text = "Attempts: 10/10"

[node name="PauseButton" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
text = "PAUSE"

[node name="VictoryScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="Overlay" type="ColorRect" parent="CanvasLayer/VictoryScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="CanvasLayer/VictoryScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VictoryScreen/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Spacer1" type="Control" parent="CanvasLayer/VictoryScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/VictoryScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "CONGRATULATIONS!"
horizontal_alignment = 1

[node name="Message" type="Label" parent="CanvasLayer/VictoryScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "All pairs matched!"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CanvasLayer/VictoryScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="CanvasLayer/VictoryScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Final Score: 0"
horizontal_alignment = 1

[node name="PointsEarnedLabel" type="Label" parent="CanvasLayer/VictoryScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "+0 Points Earned!"
horizontal_alignment = 1

[node name="AttemptsLabel" type="Label" parent="CanvasLayer/VictoryScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Attempts Used: 0/0"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="CanvasLayer/VictoryScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="CanvasLayer/VictoryScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "NEW GAME"

[node name="RetryButton" type="Button" parent="CanvasLayer/VictoryScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "RETRY"

[node name="QuitButton" type="Button" parent="CanvasLayer/VictoryScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "QUIT TO MENU"

[node name="GameOverScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7")

[node name="Overlay" type="ColorRect" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverScreen/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="AttemptsLabel" type="Label" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "You ran out of attempts!"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Final Score: 0"
horizontal_alignment = 1

[node name="MatchesLabel" type="Label" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Matches: 0/8"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RetryButton" type="Button" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "TRY AGAIN"

[node name="QuitButton" type="Button" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "QUIT TO MENU"

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5")

[node name="Overlay" type="ColorRect" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Spacer1" type="Control" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
text = "RESUME"

[node name="NewGameButton" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
text = "NEW GAME"

[node name="QuitButton" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
text = "QUIT TO MENU"
